# mailing_course_7

./: .env.sample  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: send_mail.py
mailing/migrations/: 0001_initial.py  0002_alter_attempttosend_options_alter_mailing_options_and_more.py  0003_alter_client_email.py
mailing/templates/mailing/: base.html  client_add.html  client_delete.html  client_details.html  clients_all.html  home.html  logs.html  mailing_add.html  mailing_delete.html  mailing_details.html  mailings_all.html  message_add.html  message_delete.html  message_details.html  messages_all.html
mailing/templates/mailing/includes/: menu.html
mailing/templatetags/: my_tags.py
static/css/: pricing.css
users/: forms.py  models.py  urls.py  views.py
users/fixtures/: groups_fixture.json
users/management/commands/: add_groups.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: login.html  password_reset_complete.html  password_reset_done.html  register.html  user_details.html  user_update.html  users_list.html
