[tool.poetry]
name = "mailing-course-7"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.7"
psycopg2 = "^2.9.10"
python-dotenv = "^1.1.0"
pillow = "^11.1.0"
isort = "^6.0.1"
black = "^25.1.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^8.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
